@@ -33,6 +33,7 @@ exportMethods(initializeCpp)
 import(DelayedArray)
 import(Matrix)
 import(methods)
+importClassesFrom(DelayedArray,ConstantMatrix)
 importClassesFrom(DelayedArray,DelayedMatrix)
 importClassesFrom(Matrix,dgCMatrix)
 importClassesFrom(Matrix,lgCMatrix)
