@@ -1,6 +1,10 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+initialize_constant_matrix <- function(nrow, ncol, val) {
+    .Call('_beachmat_initialize_constant_matrix', PACKAGE = 'beachmat', nrow, ncol, val)
+}
+
 apply_delayed_binary_operation <- function(left_input, right_input, op) {
     .Call('_beachmat_apply_delayed_binary_operation', PACKAGE = 'beachmat', left_input, right_input, op)
 }
