@@ -11,6 +11,7 @@
 \alias{initializeCpp,dgRMatrix-method}
 \alias{initializeCpp,lgCMatrix-method}
 \alias{initializeCpp,lgRMatrix-method}
+\alias{initializeCpp,ConstantArraySeed-method}
 \alias{initializeCpp,SVT_SparseMatrix-method}
 \alias{initializeCpp,DelayedMatrix-method}
 \alias{initializeCpp,DelayedAbind-method}
